apps/servarr/lidarr/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
spec:
  rules:
  - backendRefs:
    - name: lidarr
      port: http
